--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "sass": "^1.51.0",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
